# adtf-remote

./: .gitignore  .gitmodules  LICENSE  README.md  keller_map.xml
json/: 2020-08-14-10:53:58.json  2020-08-14-10:56:59.json  2020-08-14-11:01:14.json  2020-08-14-11:02:43.json  2020-08-14-11:04:10.json  2020-08-14-11:27:17.json  2020-08-14-11:32:32.json  2020-08-14-14:05:45.json  2020-08-14-14:08:58.json  2020-08-14-14:10:17.json  2020-08-14-14:10:32.json  2020-08-14-14:10:35.json  2020-08-14-14:12:06.json  2020-08-17-18:17:47.json  2020-08-17-18:18:39.json  2020-08-17-18:19:43.json  2020-08-17-18:22:11.json  2020-08-17-18:24:59.json  2020-08-17-18:36:04.json  2020-08-17-19:40:09.json  2020-08-17-19:45:26.json  2020-08-18-08:44:07.json  2020-08-18-09:14:10.json  2020-08-18-09:15:57.json  2020-08-18-09:19:17.json  2020-08-18-09:47:32.json  2020-08-18-09:53:36.json  2020-08-18-09:57:08.json  2020-08-18-10:02:38.json  2020-08-18-10:11:53.json  2020-08-21-13:49:59.json  2020-08-21-16:38:25.json
res/: res.qrc
src/: AutonomousController.pro  CMakeLists.txt  adtfmediasample.h  bottomleftgraphicsview.cpp  bottomleftgraphicsview.h  dialog_log_analyzer.cpp  dialog_log_analyzer.h  dialog_log_analyzer.ui  dialog_preferences.cpp  dialog_preferences.h  dialog_preferences.ui  include  log.cpp  log.h  log_analyser.cpp  log_analyser.h  log_analyser.ui  log_chart_view.cpp  log_chart_view.h  log_model.cpp  log_model.h  log_serialization.cpp  log_serialization.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkclient.cpp  networkclient.h  proxy_model.cpp  proxy_model.h  qtooltipper.cpp  qtooltipper.h  resizegraphicsview.cpp  resizegraphicsview.h  resources.qrc  src  tmyadtfmessage.cpp  tmyadtfmessage.h
src/CustomGraphicsItems/: CrossingAreaItem.cpp  CrossingAreaItem.h  InvisibleLineItem.cpp  InvisibleLineItem.h  LaneDirectionItem.cpp  LaneDirectionItem.h  LaneItem.cpp  LaneItem.h  NavigationMarkerItem.cpp  NavigationMarkerItem.h  NearfieldCellItem.cpp  NearfieldCellItem.h  NearfieldGridItem.cpp  NearfieldGridItem.h  NearfieldMapItem.cpp  NearfieldMapItem.h  QNavigationMarkerListWidget.cpp  QNavigationMarkerListWidget.h  QNavigationMarkerListWidgetItem.cpp  QNavigationMarkerListWidgetItem.h  Shared_Ptr_p.h  SpecialMarkingItem.cpp  SpecialMarkingItem.h  StreetSignItem.cpp  StreetSignItem.h  TreeNodeItem.cpp  TreeNodeItem.h  VisibleLineItem.cpp  VisibleLineItem.h
src/GUIHelper/: GraphicsViewZoom.cpp  GraphicsViewZoom.h  ItemSignalController.cpp  ItemSignalController.h
src/Navigation/: Helper.cpp  Helper.h  MapGraph.cpp  MapGraph.h  NavigationHelper.cpp  NavigationHelper.h  Vector2.cpp  Vector2.h
src/adtf_converters/: carodometry.cpp  carodometry.h  detectedline.cpp  detectedline.h  logMsg.cpp  logMsg.h  mediaDesciptionSingleton.cpp  mediaDesciptionSingleton.h  nearfieldgridmap.cpp  nearfieldgridmap.h  remoteStateMsg.cpp  remoteStateMsg.h  speed.cpp  speed.h  tmyadtfmessage.cpp  tmyadtfmessage.h  trapezoid.cpp  trapezoid.h
src/adtf_structs/: adtf_converter.cpp  adtf_converter.h  carodometry.cpp  carodometry.h  detectedline.cpp  detectedline.h  nearfieldgridmap.cpp  nearfieldgridmap.h  tmyadtfmessage.cpp  tmyadtfmessage.h  trapezoid.cpp  trapezoid.h
